--- a/client/app/dashboard/around.you.html
+++ b/client/app/dashboard/around.you.html
@@ -48,11 +48,19 @@
           <div style="text-align: center;width: 100%; padding-top: 10px">
             <a id="facebookPM" ng-href="{{around.facebook}}" ng-class="{'interested': around.facebook, 'not-interested':!around.facebook}" target="_blank"><i class="fa fa-facebook-square fa-2x facebookAroundYou"></i></a>
             <script type="text/javascript">
-              mixpanel.track_links("#facebookPM", "Facebook PM sent - around you");
+              document.getElementById("facebookPM").addEventListener("click",track);
+              function track() {
+                mixpanel.track("Facebook PM sent - around you");
+                mixpanel.people.increment("Facebook PM sent - around you");
+              }
             </script>
             <a id="email" ng-href="mailto:{{around.email}}?Subject=Hello"><i class="fa fa-envelope fa-2x"></i></a>
             <script type="text/javascript">
-              mixpanel.track_links("#email", "Email sent - around you");
+              document.getElementById("email").addEventListener("click",track);
+              function track() {
+                mixpanel.track("Email sent - around you");
+                mixpanel.people.increment("Email sent - around you");
+              }
             </script>
           </div>
         </div>
