--- a/client/app/rooms/rooms.html
+++ b/client/app/rooms/rooms.html
@@ -8,7 +8,7 @@
 
       <div class="row">
         <div class="page-header col-xs-12 col-sm-12 col-md-12 col-lg-12">
-          <h2>Available Rooms</h2>
+          <h2>Available Housing</h2>
         </div>
       </div>
 
