Several bug fixes

--- a/client/app/account/unsubscribe/unsubscribe.html
+++ b/client/app/account/unsubscribe/unsubscribe.html
@@ -1,6 +1,6 @@
 <div class="main">
   <div ng-include="'components/layout/navbar/navbar.html'"></div>
-   <section class="unsubscribe-box white-box">
+   <section class="unsubscribe-box white-box-noshadow">
 
       <header>
         <h2 class="heading">Hello {{vm.me.firstname}} {{vm.me.lastname}} <small>({{vm.me.email}})</small></h2>
