--- a/client/app/rooms/searchCriteria.html
+++ b/client/app/rooms/searchCriteria.html
@@ -114,11 +114,12 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="roomType">Room type</label>
+          <label for="roomType">Rental type</label>
           <select id="roomType" class="form-control" ng-model="rooms.searchCriteria.roomType" >
-            <option value="single">Single</option>
-            <option value="double">Double</option>
+            <option value="single">Single room</option>
+            <option value="double">Double room</option>
             <option value="living room">Living room</option>
+            <option value="loft">Entire Apt.</option>
           </select>
         </div>
       </div>
