--- a/client/app/dashboard/looking/looking-details/looking.info.section.html
+++ b/client/app/dashboard/looking/looking-details/looking.info.section.html
@@ -84,7 +84,7 @@
       </div>
       <div class="col-xs-9 col-sm-7 input-post">
         <dl>
-          <dt>Max roommates</dt>
+          <dt>Group size</dt>
           <dd>{{detail.lookingDetail.numRoommates}}</dd>
         </dl>
       </div>
@@ -175,7 +175,8 @@
       <div class="col-xs-9 col-sm-7 input-post">
         <dl>
           <dt>Parking</dt>
-          <dd>{{detail.lookingDetail.parkingNeeded?'Yes':'No'}}</dd>
+          <dd ng-if="detail.lookingDetail.parkingNeeded !== null">{{detail.lookingDetail.parkingNeeded?'Yes':'No'}}</dd>
+          <dd ng-if="detail.lookingDetail.parkingNeeded === null">No preference</dd>
         </dl>
       </div>
     </div>
