--- a/client/app/dashboard/looking/searchCriteria.html
+++ b/client/app/dashboard/looking/searchCriteria.html
@@ -65,7 +65,7 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="numRoommates">Max roommates</label>
+          <label for="numRoommates">Group size</label>
           <input type="number" id="numRoommates"  name="numRoommates" class="form-control" placeholder="ex. 3 (max 10)"
                  ng-model="looking.searchCriteria.numRoommates" min="1" max="10"/>
         </div>
@@ -222,6 +222,7 @@
                   ng-model="looking.searchCriteria.parkingNeeded">
             <option value="true">Yes</option>
             <option value="false">No</option>
+            <option value="null">No preference</option>
           </select>
         </div>
       </div>
