--- a/client/app/rooms/searchCriteria.html
+++ b/client/app/rooms/searchCriteria.html
@@ -116,10 +116,11 @@
         <div class="col-xs-9 col-sm-7 input-post">
           <label for="roomType">Rental type</label>
           <select id="roomType" class="form-control" ng-model="rooms.searchCriteria.roomType" >
-            <option value="single">Single room</option>
-            <option value="double">Double room</option>
-            <option value="living room">Living room</option>
-            <option value="loft">Entire Apt.</option>
+            <option value="Single Room">Single room</option>
+            <option value="Double Room">Double room</option>
+            <option value="Living Room">Living room</option>
+            <option value="Entire Apt">Entire Apartment</option>
+            <option value="Entire House">Entire House</option>
           </select>
         </div>
       </div>
