--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -97,12 +97,11 @@
                   </div>
                   <div class="info">
                     <strong class="value">
-                      {{room.roomDetails.monthlyPrice | currency}} mo. / Room
+                      {{room.roomDetails.monthlyPrice | currency}} / mo.
                     </strong>
                   </div>
                   <ul class="specs">
-                    <li ng-if="room.roomDetails.roomType !== 'loft'"><i class="fa fa-bigBed"></i>&nbsp;&nbsp;{{room.roomDetails.roomType}}</li>
-                    <li ng-if="room.roomDetails.roomType === 'loft'"><i class="fa fa-bigBed"></i>&nbsp;&nbsp;Entire Apt</li>
+                    <li><i class="fa fa-bigBed"></i>&nbsp;&nbsp;{{room.roomDetails.roomType}}</li>
                     <li><i class="fa fa-shower"></i>&nbsp;&nbsp;{{room.roomDetails.sharedBathroom ? "Shared" : "Private"}} bathroom</li>
                     <li ng-show="room.roomDetails.numRoomates > 1"><i class="fa fa-users"></i>&nbsp;&nbsp;{{room.roomDetails.numRoomates}} roommates + You</li>
                     <li ng-show="room.roomDetails.numRoomates == 1"><i class="fa fa-users"></i>&nbsp;&nbsp;{{room.roomDetails.numRoomates}} roommate + You</li>
@@ -184,8 +183,7 @@
                       <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4 col-sm-offset-1 col-md-offset-1 col-lg-offset-1">
                         <div class="info" >
                           <span class='value'>Rent: {{room.monthlyPrice |currency}} / mo.</span>
-                          <span class='address' ng-if="room.roomType !== 'loft'"><i class="fa fa-bigBed"></i>&nbsp;&nbsp;{{room.roomType}}</span>
-                          <span class='address' ng-if="room.roomType === 'loft'"><i class="fa fa-bigBed"></i>&nbsp;&nbsp;Entire Apt</span>
+                          <span class='address'><i class="fa fa-bigBed"></i>&nbsp;&nbsp;{{room.roomType}}</span>
                           <span class='address'><i class="fa fa-transgender"></i>&nbsp;&nbsp;Gender: {{room.gender}}</span>
                           <span class='address'><i class="fa fa-users"></i>&nbsp;&nbsp;Current roommates: {{room.numRoomates}}</span>
                           <span class='address'><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{room.availableMoveIn | date }}</span>
