Reverting looking changes for parking no preference hack

--- a/client/app/dashboard/looking/looking-details/looking.info.section.html
+++ b/client/app/dashboard/looking/looking-details/looking.info.section.html
@@ -176,8 +176,7 @@
       <div class="col-xs-9 col-sm-7 input-post">
         <dl>
           <dt>Parking</dt>
-          <dd ng-if="detail.lookingDetail.parkingNeeded !== null">{{detail.lookingDetail.parkingNeeded?'Yes':'No'}}</dd>
-          <dd ng-if="detail.lookingDetail.parkingNeeded === null">No preference</dd>
+          <dd>{{detail.lookingDetail.parkingNeeded?'Yes':'No'}}</dd>
         </dl>
       </div>
     </div>
