--- a/client/app/dashboard/my-profile/add-looking/new.looking.html
+++ b/client/app/dashboard/my-profile/add-looking/new.looking.html
@@ -162,11 +162,10 @@
                </div>
              </div>
              <div class="col-xs-9 col-sm-7 input-post">
-               <label for="parkingNeeded">Parking included?</label>
-               <select id="parkingNeeded" class="form-control" name="parking" ng-model="newLooking.tempLooking.parkingNeeded" ng-class="{'educationError': newLookingForm.parking.$invalid && newLooking.submitted}">
+               <label for="parkingNeeded">Parking included?</label><sup class="asterisk">*</sup>
+               <select id="parkingNeeded" class="form-control" name="parking" ng-model="newLooking.tempLooking.parkingNeeded" required ng-class="{'educationError': newLookingForm.parking.$invalid && newLooking.submitted}">
                  <option value="true">Yes</option>
                  <option value="false">No</option>
-                 <option value="">No preference</option>
                </select>
              </div>
            </div>
