One more revert for looking hack

--- a/client/app/dashboard/my-profile/edit-looking/edit.looking.html
+++ b/client/app/dashboard/my-profile/edit-looking/edit.looking.html
@@ -144,7 +144,7 @@
             </div>
           </div>
           <div class="col-xs-9 col-sm-7 input-post">
-            <label for="parkingNeeded">Parking included?</label>
+            <label for="parkingNeeded">Parking included?</label><sup class="asterisk">*</sup>
             <select
               ng-options="option.value as option.text for option in editLooking.ddlYesNoSelect"
               id="parkingNeeded" class="form-control" ng-model="editLooking.tempLooking.parkingNeeded">
