Added ability to post entire apartment or entire house for looking

--- a/client/app/dashboard/looking/looking-details/looking.info.section.html
+++ b/client/app/dashboard/looking/looking-details/looking.info.section.html
@@ -127,7 +127,7 @@
       </div>
       <div class="col-xs-9 col-sm-7 input-post">
         <dl>
-          <dt>Room type</dt>
+          <dt>Rental type</dt>
           <dd>{{detail.lookingDetail.roomType}}</dd>
         </dl>
       </div>
