--- a/client/app/dashboard/looking/searchCriteria.html
+++ b/client/app/dashboard/looking/searchCriteria.html
@@ -112,7 +112,7 @@
         </div>
       </div>
 
-      <!-- Room type -->
+      <!-- Rental type -->
 
       <div class="row post-padding">
         <div class="col-xs-2 col-sm-2 col-xs-offset-1 col-sm-offset-1">
@@ -121,11 +121,13 @@
           </div>
         </div>
         <div class="col-xs-9 col-sm-7 input-post">
-          <label for="roomType">Room type</label>
+          <label for="roomType">Rental type</label>
           <select id="roomType" class="form-control" ng-model="looking.searchCriteria.roomType" >
-            <option value="single">Single</option>
-            <option value="double">Double</option>
-            <option value="living room">Living room</option>
+            <option value="Single Room">Single Room</option>
+            <option value="Double Room">Double Room</option>
+            <option value="Living Room">Living Room</option>
+            <option value="Entire Apartment">Entire Apartment</option>
+            <option value="Entire House">Entire House</option>
           </select>
         </div>
       </div>
