Added rental length field to rooms. Removed lease length category

--- a/client/app/dashboard/my-profile/edit-looking/edit.looking.html
+++ b/client/app/dashboard/my-profile/edit-looking/edit.looking.html
@@ -4,7 +4,7 @@
 <div class="container" ng-if="editLooking.tempLooking">
   <div class="row">
     <div class="page-header">
-      <h2>Edit Looking</h2>
+      <h2>Edit My Looking Post</h2>
     </div>
 
     <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 white-box">
