Fixed add and edit looking field placement and looking box size.

--- a/client/app/aroundYou/around.you.html
+++ b/client/app/aroundYou/around.you.html
@@ -33,6 +33,7 @@
 
           <!-- search partial -->
           <div class="white-box interested-box-search" ng-if="around.showSearch">
+            <p style="margin-bottom: 2%">You can select multiple fields based on what you want.</p>
             <form name="connectToSearch" ng-submit="around.setQueryAndSearch(around.query)" novalidate>
               <div class="row">
                 <div class="col-xs-12 col-sm-4 col-md-4">
