--- a/client/app/dashboard/looking/searchCriteria.html
+++ b/client/app/dashboard/looking/searchCriteria.html
@@ -2,6 +2,8 @@
 
   <div class="row white-box searchBox" ng-show="looking.showSearch">
 
+    <p style="margin-bottom: 2%">You can select multiple fields based on what you want.</p>
+
     <!--start of first col 4-->
     <div class="col-md-4">
 
