Fixed minor CSS and placement issues

--- a/client/app/dashboard/dashboard.html
+++ b/client/app/dashboard/dashboard.html
@@ -107,6 +107,7 @@
                     <li ng-show="room.roomDetails.numRoomates == 1"><i class="fa fa-users"></i>&nbsp;&nbsp;{{room.roomDetails.numRoomates}} roommate + You</li>
                     <li><i class="fa fa-venus-mars"></i>&nbsp;&nbsp;{{room.roomDetails.gender}}</li>
                     <li><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;{{room.roomDetails.availableMoveIn | date }}</li>
+                    <li><i class="fa fa-clock-o"></i>&nbsp;&nbsp;{{room.roomDetails.leaseType}}</li>
                     <li><i class="fa fa-map-marker"></i>&nbsp;&nbsp;{{room.propertyDetails.city }}</li>
                   </ul>
                 </a>
