Changed mailing list fields

--- a/client/app/roomDetail/highlights.section.html
+++ b/client/app/roomDetail/highlights.section.html
@@ -81,7 +81,7 @@
             <td><i class="fa fa-arrow-right"></i>&nbsp;&nbsp;Move-in:&nbsp;&nbsp;{{room.roomDetail.roomDetails.availableMoveIn | date }}</td>
           </tr>
           <tr>
-            <td><i class="fa fa-bar-chart"></i>&nbsp;&nbsp;Utilities:&nbsp;&nbsp;{{room.roomDetail.roomDetails.monthlyUtilityCost | currency}}</td>
+            <td><i class="fa fa-venus-mars"></i>&nbsp;&nbsp;Gender:&nbsp;&nbsp;{{room.roomDetail.roomDetails.gender}}</td>
             <td><i class="fa fa-clock-o"></i>&nbsp;&nbsp;Rental length:&nbsp;&nbsp;{{room.roomDetail.roomDetails.leaseType}}</td>
           </tr>
         </table>
