--- a/client/app/roomDetail/more.info.section.html
+++ b/client/app/roomDetail/more.info.section.html
@@ -49,8 +49,8 @@
           <dd>{{room.roomDetail.roomDetails.smokingAllowed | boolean}}</dd>
           <br>
 
-          <dt><i class="fa fa-venus-mars fa-lg"></i>&nbsp;&nbsp;Gender preference:&nbsp;&nbsp;</dt>
-          <dd>{{room.roomDetail.roomDetails.gender}}</dd>
+          <dt><i class="fa fa-venus-mars fa-lg"></i>&nbsp;&nbsp;Monthly utility cost:&nbsp;&nbsp;</dt>
+          <dd>{{room.roomDetail.roomDetails.monthlyUtilityCost | currency}}</dd>
         </dl>
 
       </div>
